@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add ITexture::getSource which can be used to check where the last IVideoDriver::getTexture call found the texture.
 - Add IMeshTextureLoader interface and replace texture-loading algorithms in most meshloaders.
 - CGUICheckBox no longer gives up focus on EMIE_LMOUSE_LEFT_UP (thx @Demre for reporting)
 - Bugfix: IGUIElement::addChild now prevents setting an element as it's own child.
